--- a/action.yaml
+++ b/action.yaml
@@ -26,7 +26,7 @@ runs:
     - run: |
         set -e
 
-        if [[ -z "$INPUT_GITHUB_TOKEN" ]]; then
+        if [[ -z "$GITHUB_TOKEN" ]]; then
           echo "Missing GITHUB TOKEN in the action"
           exit 1
         fi
@@ -41,7 +41,7 @@ runs:
           OWNER_REPOSITORY=$INPUT_REPOSITORY;
         fi
 
-        AUTH="Authorization: token ${INPUT_GITHUB_TOKEN}"
+        AUTH="Authorization: token $GITHUB_TOKEN"
         response=$(curl -sH "$AUTH" https://api.github.com/repos/${OWNER_REPOSITORY}/releases/${INPUT_RELEASE})
         id=`echo "$response" | jq '.assets[0] .id' |  tr -d '"'`
         name=`echo "$response" | jq '.assets[0] .name' |  tr -d '"'`
