fix(release): change branch name

--- a/action.yaml
+++ b/action.yaml
@@ -61,8 +61,8 @@ runs:
 
         GH_ASSET="https://api.github.com/repos/${OWNER_REPOSITORY}/releases/assets/$id"
         # download the artifact
-        mkdir -p $GITHUB_HEAD_REF
-        cd $GITHUB_HEAD_REF
+        mkdir -p  ${GITHUB_HEAD_REF}
+        cd  ${GITHUB_HEAD_REF}
         curl -v -L -o "$name" -H "$AUTH" -H 'Accept: application/octet-stream' "$GH_ASSET"
         echo "::set-output name=artifact_name::$name"
         echo "::set-output name=result::$(echo success)"
